deployment_pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "k8s-microproject-deployment"
spec:
  replicas: 1 #Nombre de pod
  selector: #Selection du pod
    matchLabels: #Label de selection
      app: k8s-microproject
  template:
    metadata: #Label appliquer au(x) pod
      labels:
        app: k8s-microproject #Label du pod
    spec:
      containers: #Container du pod
        - name: "nid77-k8smicroproject"
          image: nid77/k8s-microproject:latest
          env: #Variable d'environnement
            - name: USER_NAME
              valueFrom:
                configMapKeyRef:
                  name: configmap-k8s-microproject
                  key: user_name
                  optional: true
          ports:
            - containerPort: 3000
          livenessProbe: #Vérification de l'état du pod
            httpGet:
              path: /healthz
              port: 3000
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - mountPath: /data 
              name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: pvc-k8s-microproject
