service_statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: statefulset-k8s-microproject-service
spec:
  selector: # Selection du pod
    app: statefulset
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30012
  type: LoadBalancer
