ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-microproject-ingress
spec:
  tls:
  - hosts:
      - k8s-microproject.rayan
    secretName: secret-tls
  rules:
    - host: k8s-microproject.rayan
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: k8s-microproject-service
              port:
                number: 80
